--- a/templates/article/tag/tag_list.html
+++ b/templates/article/tag/tag_list.html
@@ -34,7 +34,7 @@
                         </a>
                     </td>
                 </tr>
-                {% empty %}
+            {% empty %}
                 <p>You have no article tags,please add them.</p>
             {% endfor %}
 
@@ -42,22 +42,50 @@
     </div>
     <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/layer.js' %}"></script>
-    <script type="text/javascript" >
-    function add_tag() {
-        tag=$("#id_tag").val();
-        $.ajax({
-            url:"{% url 'article:article_tag' %}",
-            type:"POST",
-            data:{"tag":tag},
-            success:function(e){
-                if(e=="1"){
-                    layer.msg("You have add the new tag.");
-                    window.location.reload();
-                }else{
-                    layer.msg(e)
+    <script type="text/javascript">
+        function add_tag() {
+            tag = $("#id_tag").val();
+            $.ajax({
+                url: "{% url 'article:article_tag' %}",
+                type: "POST",
+                data: {"tag": tag},
+                success: function (e) {
+                    if (e == "1") {
+                        layer.msg("You have add the new tag.");
+                        window.location.reload();
+                    } else {
+                        layer.msg(e)
+                    }
                 }
-            }
-        });
-    }
+            });
+        }
+
+        function del_tag(the, tag_id) {
+            var article_tag = $(the).parents("tr").children("td").eq(1).text();
+            layer.open({
+                type: 1,
+                skin: "layui-layer-rim",
+                area: ["400px", "200px"],
+                title: "删除文章标签",
+                content: '<div class="text-center" style="margin-top:20px">' +
+                    '<p>是否确定删除标签《' + article_tag + '》</p></div>',
+                btn: ["确定", "取消"],
+                yes: function () {
+                    $.ajax({
+                        url: "{% url 'article:del_article_tag' %}",
+                        type: "POST",
+                        data: {"tab_id": tag_id},
+                        success: function (e) {
+                            if (e == "1") {
+                                parent.location.reload();
+                                layre.msg("The tag has been deleted");
+                            } else {
+                                layre.msg("删除失败");
+                            }
+                        },
+                    })
+                },
+            })
+        }
     </script>
 {% endblock %}
