--- a/templates/article/column/article_post.html
+++ b/templates/article/column/article_post.html
@@ -18,6 +18,20 @@
                     </select>
                 </div>
             </div>
+        <div class="row" style="margin-top: 10px;">
+            <div class="col-md-2 text-right"><span>文章标签：</span></div>
+            <div class="col-md-10 text-left">
+                {% for tag in article_tags %}
+                    <label class="checkbox-inline">
+                        <input class="tagcheckbox" type="checkbox" id="{{ tag.id }}"
+                        name="article_tag" value="{{ tag.tag }}">{{ tag.tag }}
+                    </label>
+                    {% empty %}
+                    <p>没有可用标签，你可以<a href="{% url 'article:article_tag' %}">新增标签</a></p>
+                {% endfor %}
+
+            </div>
+        </div>
             <div class="row" style="margin-top: 10px">
                 <div class="col-md-2 text-right"><span>内容</span></div>
                 {#                <div class="col-md-10 text-left">{{ article_post_form.body }}</div>#}
@@ -35,15 +49,21 @@
     <link rel="stylesheet" href="{% static 'editor/css/style.css' %}">
     <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/layer.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/json2.js' %}"></script>
     <script type="text/javascript">
         function publish_article() {
             var title = $("#id_title").val();
             var column_id = $("#which_column").val();
             var body = $("#id_body").val();
+            var article_tags=[];
+            $.each($("input[name='article_tag']:checked"),
+            function () {article_tags.push($(this).val())});
+
             $.ajax({
                 url: "{% url 'article:article_post' %}",
                 type: "POST",
-                data: {"title": title, "body": body, "column_id": column_id},
+                data: {"title": title, "body": body, "column_id": column_id,
+                    "tags":JSON.stringify(article_tags)},
                 success: function (e) {
                     if (e == "1") {
                         layer.msg("successful");
