--- a/templates/article/header.html
+++ b/templates/article/header.html
@@ -8,7 +8,8 @@
             <ul class="nav navbar-nav" role="tablist">
                 <li><a href="{% url 'blog_title' %}">首页</a></li>
                 <li><a href="{% url 'article:article_column' %}">文章管理</a></li>
-                <li><a href="{% url 'article:article_column' %}">后台管理</a></li>
+                <li><a href="{% url 'image:image_list' %}">图片管理</a></li>
+                <li><a href="{% url 'image:falls_images' %}">美图</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
