--- a/templates/article/leftlider.html
+++ b/templates/article/leftlider.html
@@ -4,5 +4,10 @@
         <p><a href="{% url 'article:article_post' %}">发布文章</a></p>
         <p><a href="{% url 'article:article_list' %}">文章列表</a></p>
         <p><a href="{% url 'article:article_tag' %}">文章标签</a></p>
+        <hr>
+        <div class="text-center" style="margin-top: 5px;">
+            <p><h4>图片管理</h4></p>
+            <p><a href="{% url 'image:image_list' %}">图片管理</a></p>
+        </div>
     </div>
 </div>
