--- a/templates/article/header.html
+++ b/templates/article/header.html
@@ -9,6 +9,7 @@
                 <li><a href="{% url 'blog_title' %}">首页</a></li>
                 <li><a href="{% url 'article:article_column' %}">文章管理</a></li>
                 <li><a href="{% url 'image:image_list' %}">图片管理</a></li>
+                <li><a href="{% url 'course:manage_course' %}">课程管理</a></li>
                 <li><a href="{% url 'image:falls_images' %}">美图</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
